compiler/testData/diagnostics/tests/enum/enumNoSemicolon.kt
enum class MyEnum {
    A,
    <!ENUM_ENTRY_USES_DEPRECATED_OR_NO_DELIMITER!>B<!>
 
    val z = 42
}